K8S/k8s/db-operator.yaml
#Self-hosted Kubernetes
#│
#├── PostgreSQL Operator       ← CloudNativePG
#│
#├── CSI / StorageClass        ← Longhorn / Ceph / etc.
#│
#├── PostgreSQL Cluster
#│    ├── PG1 Primary  → PVC1
#│    ├── PG2 Replica  → PVC2
#│    └── PG3 Replica  → PVC3
#│
#├── Kubernetes Services
#│    ├── postgres-rw
#│    ├── postgres-ro
#│    └── postgres-r
#│
#├── PgBouncer                 ← желательно при большом числе соединений
#│
#└── внешний LB                ← только если PostgreSQL нужен снаружи K8s
#     например MetalLB


#Устанавливаем CloudNativePG Operator
#kubectl apply --server-side -f \
#https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/release-1.30/releases/cnpg-1.30.0.yaml


#kubectl get pods -n cnpg-system
#cnpg-controller-manager-xxxxx   1/1   Running

apiVersion: v1
kind: Namespace

metadata:
  name: databases
