K8S/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  labels:
    app: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
      
  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.2
          ports:
            - containerPort: 80

          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 1Gi
              cpu: 100m
