K8S/k8s/frontend-pod.yml
apiVersion: v1
kind: Pod

metadata:
  name: frontend
  labels:
    app: frontend

spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app:1.2
      ports:
        - containerPort: 80

      resources:
        requests:
          memory: 100Mi
          cpu: 50m
        limits:
          memory: 1Gi
          cpu: 100m
