K8S/k8s/frontend-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-ip
  labels:
    app: frontend

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 80
      protocol: TCP
