K8S/k8s/frontend-node-port.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-node-port

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - port: 3000
      nodePort: 31200
      targetPort: 80
