K8S/k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: conv.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ip
                port:
                  number: 3000
